manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sync-disk-server
  labels:
    app: sync-disk-server
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  selector:
    app: sync-disk-server
    ref: __CI_ENVIRONMENT_SLUG__
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ExternalName
  externalName: postgres.common-apps.svc.cluster.local
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ExternalName
  externalName: redis.common-apps.svc.cluster.local
  ports:
    - port: 6379
