manifests/ingress_prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sync-disk-server-ingress
  labels:
    app: sync-disk-server
    ref: __CI_ENVIRONMENT_SLUG__
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - __CI_ENVIRONMENT_SLUG__.hanzec.dev
      secretName: syncdisk-tls-stag
  rules:
    - host: __CI_ENVIRONMENT_SLUG__.hanzec.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sync-disk-server
                port:
                  number: 8080
